--- a/light-ui/package.json
+++ b/light-ui/package.json
@@ -5,7 +5,7 @@
     "main": "src/index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "node build/index.js"
+        "build": "node build/build.js"
     },
     "keywords": [
         "component",
@@ -16,5 +16,6 @@
     "devDependencies": {
         "webpack": "^4.29.3",
         "webpack-cli": "^3.2.3"
-    }
+    },
+    "dependencies": {}
 }
