--- a/light-ui/package.json
+++ b/light-ui/package.json
@@ -1,21 +1,27 @@
 {
-    "name": "light-ui",
-    "version": "1.0.0",
-    "description": "Vue UI elements",
-    "main": "src/index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "node build/build.js"
-    },
-    "keywords": [
-        "component",
-        "vue"
-    ],
-    "author": "fst",
-    "license": "ISC",
-    "devDependencies": {
-        "webpack": "^4.29.3",
-        "webpack-cli": "^3.2.3"
-    },
-    "dependencies": {}
+  "name": "light-ui",
+  "version": "1.0.0",
+  "description": "Vue UI elements",
+  "main": "src/index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "node build/build.js"
+  },
+  "keywords": [
+    "component",
+    "vue"
+  ],
+  "author": "fst",
+  "license": "ISC",
+  "devDependencies": {
+    "clean-webpack-plugin": "^1.0.1",
+    "css-loader": "^2.1.0",
+    "html-webpack-plugin": "^3.2.0",
+    "lodash": "^4.17.11",
+    "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.29.3",
+    "webpack-cli": "^3.2.3"
+  },
+  "dependencies": {}
 }
