--- a/light-ui/package.json
+++ b/light-ui/package.json
@@ -5,7 +5,9 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "start": "node build/dev.js",
+    "dev": "node build/dev.js"
   },
   "keywords": [
     "component",
@@ -16,12 +18,16 @@
   "devDependencies": {
     "clean-webpack-plugin": "^1.0.1",
     "css-loader": "^2.1.0",
+    "express": "^4.16.4",
     "html-webpack-plugin": "^3.2.0",
     "lodash": "^4.17.11",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.29.3",
-    "webpack-cli": "^3.2.3"
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-middleware": "^3.6.0",
+    "webpack-hot-middleware": "^2.24.3",
+    "webpack-merge": "^4.2.1"
   },
   "dependencies": {}
 }
