--- a/light-ui/package.json
+++ b/light-ui/package.json
@@ -19,6 +19,7 @@
     "clean-webpack-plugin": "^1.0.1",
     "css-loader": "^2.1.0",
     "express": "^4.16.4",
+    "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^3.2.0",
     "lodash": "^4.17.11",
     "style-loader": "^0.23.1",
