my webpack test repo

--- a/light-ui/package.json
+++ b/light-ui/package.json
@@ -19,11 +19,15 @@
     "clean-webpack-plugin": "^1.0.1",
     "css-loader": "^2.1.0",
     "express": "^4.16.4",
-    "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^3.2.0",
     "lodash": "^4.17.11",
+    "mini-css-extract-plugin": "^0.5.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "postcss-loader": "^3.0.0",
     "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.1.2",
     "url-loader": "^1.1.2",
+    "vue": "^2.6.8",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3",
     "webpack-dev-middleware": "^3.6.0",
