--- a/light-ui/package.json
+++ b/light-ui/package.json
@@ -27,7 +27,9 @@
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.1.2",
     "url-loader": "^1.1.2",
-    "vue": "^2.6.8",
+    "vue": "^2.6.10",
+    "vue-loader": "^15.7.0",
+    "vue-template-compiler": "^2.6.10",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3",
     "webpack-dev-middleware": "^3.6.0",
