--- a/light-ui/package.json
+++ b/light-ui/package.json
@@ -27,7 +27,6 @@
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.1.2",
     "url-loader": "^1.1.2",
-    "vue": "^2.6.10",
     "vue-loader": "^15.7.0",
     "vue-template-compiler": "^2.6.10",
     "webpack": "^4.29.3",
@@ -36,5 +35,8 @@
     "webpack-hot-middleware": "^2.24.3",
     "webpack-merge": "^4.2.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "vue": "^2.6.10",
+    "vue-router": "^3.0.3"
+  }
 }
